ops/cilium/install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-system
